finish teleporting script (it doesn't work)

--- a/Language/en-US.yml
+++ b/Language/en-US.yml
@@ -2,3 +2,5 @@ en-US:
   STR_TEST_BATTLE: "Test battle"
   STR_MANSION_DEFENSE: "Test deployment"
   STR_DAO: "The Dao"
+  STR_CRANE_DANCE: "Dance of the Crane"
+  STR_TMP_TP_UNIT: "FIXME"
